fix: 仕様変更に合わせテストを修正