@@ -2,22 +2,22 @@ package com.github.oosm032519.playlistviewernext.controller.playlist;
 
 import com.github.oosm032519.playlistviewernext.model.FavoritePlaylistResponse;
 import com.github.oosm032519.playlistviewernext.service.playlist.UserFavoritePlaylistsService;
+import com.github.oosm032519.playlistviewernext.util.HashUtil;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.http.ResponseEntity;
-import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.oauth2.core.user.OAuth2User;
 
 import java.security.NoSuchAlgorithmException;
-import java.util.*;
+import java.util.List;
+import java.util.Objects;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.Mockito.when;
-
 
 @ExtendWith(MockitoExtension.class)
 public class UserFavoritePlaylistsControllerTest {
@@ -25,61 +25,61 @@ public class UserFavoritePlaylistsControllerTest {
     @Mock
     private UserFavoritePlaylistsService userFavoritePlaylistsService;
 
+    @Mock
+    private HashUtil hashUtil;
+
+    @Mock
+    private OAuth2User principal;
+
     @InjectMocks
     private UserFavoritePlaylistsController userFavoritePlaylistsController;
 
+    @BeforeEach
+    public void setup() {
+        userFavoritePlaylistsController = new UserFavoritePlaylistsController(userFavoritePlaylistsService, hashUtil);
+    }
+
     @Test
-    void getFavoritePlaylists_正常系() throws NoSuchAlgorithmException {
+    public void testGetFavoritePlaylists_Success() throws NoSuchAlgorithmException {
         // テストデータの準備
-        String userId = "test_user_id";
-        String hashedUserId = userFavoritePlaylistsController.hashUserId(userId);
-        OAuth2User principal = new TestOAuth2User(Map.of("id", userId));
-        List<FavoritePlaylistResponse> expectedPlaylists = Collections.emptyList();
+        String userId = "testUserId";
+        String hashedUserId = "hashedTestUserId";
+        List<FavoritePlaylistResponse> expectedPlaylists = List.of(
+                new FavoritePlaylistResponse("playlistId1", "playlistName1", "ownerName1", 10, null),
+                new FavoritePlaylistResponse("playlistId2", "playlistName2", "ownerName2", 20, null)
+        );
 
         // モックの設定
+        when(principal.getAttribute("id")).thenReturn(userId);
+        when(hashUtil.hashUserId(Objects.requireNonNull(userId))).thenReturn(hashedUserId);
         when(userFavoritePlaylistsService.getFavoritePlaylists(hashedUserId)).thenReturn(expectedPlaylists);
 
         // テスト対象メソッドの実行
-        ResponseEntity<?> response = userFavoritePlaylistsController.getFavoritePlaylists(principal);
+        ResponseEntity<?> responseEntity = userFavoritePlaylistsController.getFavoritePlaylists(principal);
 
         // アサーション
-        assertThat(response.getStatusCodeValue()).isEqualTo(200);
-        assertThat(response.getBody()).isEqualTo(expectedPlaylists);
+        assertThat(responseEntity.getStatusCodeValue()).isEqualTo(200);
+        assertThat(responseEntity.getBody()).isEqualTo(expectedPlaylists);
     }
+
 
     @Test
-    void getFavoritePlaylists_異常系_userIdがnullの場合() {
-        // テストデータの準備: HashMapを使用してnull値を許可
-        Map<String, Object> attributes = new HashMap<>();
-        attributes.put("id", null);
-        OAuth2User principal = new TestOAuth2User(attributes);
+    public void testGetFavoritePlaylists_NoPlaylists() throws NoSuchAlgorithmException {
+        // テストデータの準備
+        String userId = "testUserId";
+        String hashedUserId = "hashedTestUserId";
+        List<FavoritePlaylistResponse> expectedPlaylists = List.of(); // 空のリスト
 
-        // テスト対象メソッドの実行とアサーション
-        assertThrows(NullPointerException.class, () -> userFavoritePlaylistsController.getFavoritePlaylists(principal));
-    }
+        // モックの設定
+        when(principal.getAttribute("id")).thenReturn(userId);
+        when(hashUtil.hashUserId(Objects.requireNonNull(userId))).thenReturn(hashedUserId);
+        when(userFavoritePlaylistsService.getFavoritePlaylists(hashedUserId)).thenReturn(expectedPlaylists);
 
+        // テスト対象メソッドの実行
+        ResponseEntity<?> responseEntity = userFavoritePlaylistsController.getFavoritePlaylists(principal);
 
-    // OAuth2User のモック実装のための内部クラス
-    private static class TestOAuth2User implements OAuth2User {
-        private final Map<String, Object> attributes;
-
-        public TestOAuth2User(Map<String, Object> attributes) {
-            this.attributes = attributes;
-        }
-
-        @Override
-        public Map<String, Object> getAttributes() {
-            return attributes;
-        }
-
-        @Override
-        public Collection<? extends GrantedAuthority> getAuthorities() {
-            return null;
-        }
-
-        @Override
-        public String getName() {
-            return null;
-        }
+        // アサーション
+        assertThat(responseEntity.getStatusCodeValue()).isEqualTo(200);
+        assertThat(responseEntity.getBody()).isEqualTo(expectedPlaylists); // 空のリストが返されることを確認
     }
 }
